--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,13 @@ ul {
 }
 
 /* PAGINATION */
+.container-note-pagination {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .pagination {
   margin-top: 32px;
   grid-column: 2;
