--- a/client/src/App.css
+++ b/client/src/App.css
@@ -184,6 +184,14 @@ ul {
   border-radius: 16px;
 }
 
+.note-form div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
 .note-form input,
 .note-form select {
   width: 220px;
@@ -196,13 +204,22 @@ ul {
   font-family: inherit;
 }
 
+.note-form input {
+  width: 100%;
+}
+
+.note-form-warning {
+  border: 2px solid #ef4444 !important;
+}
+
 .note-form input::placeholder {
   color: #343a40;
 }
 
-.note-form input:first-child {
+.note-form div:first-child {
   flex-grow: 1;
 }
+
 
 .note-form span {
   font-weight: 600;
@@ -262,10 +279,3 @@ ul {
   background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
 }
 
-.warning {
-  
-  padding: 20px 0;
-  background-color: #ef4444;
-  font-size: 32px;
-  margin-bottom: 16px;
-}
